plugins {
	id 'net.fabricmc.fabric-loom-remap' version "${loom_version}"
	id 'maven-publish'
	id "me.modmuss50.mod-publish-plugin" version "1.0.0"
}

version = project.mod_version
group = project.maven_group

base {
	archivesName = "${project.archives_base_name}+mc${project.minecraft_version}"
}

repositories {
	// Add repositories to retrieve artifacts from in here.
	// You should only use this when depending on other mods because
	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
	// for more information about repositories.
	maven { url "https://maven.shedaniel.me/" }
	maven { url "https://maven.terraformersmc.com/releases/" }

	maven {
		name = "ParchmentMC"
		url = "https://maven.parchmentmc.org"
	}
	maven {
		name = "Gegy"
		url = "https://maven.gegy.dev/releases/"
	}
}

loom {
	splitEnvironmentSourceSets()

	mods {
		"mapart-helper" {
			sourceSet sourceSets.main
			sourceSet sourceSets.client
		}
	}

}

dependencies {
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings(loom.layered {
		officialMojangMappings()
		parchment("org.parchmentmc.data:parchment-1.21.8:2025.09.14@zip")
		mappings("dev.lambdaurora:yalmm-mojbackward:1.21.8+build.3")
	})

	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
	// Fabric API. This is technically optional, but you probably want it anyway.
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

	modApi "me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}"
	modApi "com.terraformersmc:modmenu:${project.modmenu_version}"
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": inputs.properties.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 21
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

jar {
	from "LICENSE"
}

publishMods {
	file = remapJar.archiveFile
	changelog = file("changelog.md").text
	type = STABLE
	modLoaders.add("fabric")
	dryRun = true

	def changelog_simple = changelog.get()
			.replace("<summary>", "### ")
			.replaceAll("(?m)^\\s*<details>\\s*", "\n")
			.replaceAll("(?m)^\\s*</details>\\s*", "")
			.replaceAll("<.*?>", "")
	def supportedVersions = supported_versions.split(",")

	curseforge {
		projectId = "1343604"
		projectSlug = "mapart-helper"
		accessToken = providers.environmentVariable("CURSEFORGE_API_KEY")
		announcementTitle = "CurseForge"
		changelog = changelog_simple
		changelogType = "markdown"

		supportedVersions.each { String value ->
			value = value.trim()
			if (value.contains("--")) {
				def versions = value.split("--")
				minecraftVersionRange {
					start = versions[0]
					end = versions[1]
				}
			} else {
				minecraftVersions.add(value)
			}
		}

		requires("fabric-api")
		requires("cloth-config")
		optional("modmenu")
	}
	modrinth {
		projectId = "qRKpqkGI"
		accessToken = providers.environmentVariable("MODRINTH_TOKEN")
		announcementTitle = "Modrinth"

		supportedVersions.each { String value ->
			value = value.trim()
			if (value.contains("--")) {
				def versions = value.split("--")
				minecraftVersionRange {
					start = versions[0]
					end = versions[1]
				}
			} else {
				minecraftVersions.add(value)
			}
		}

		requires("fabric-api")
		requires("cloth-config")
		optional("modmenu")
	}
	// Do GitHub release and Discord announcement only for the main version
	if (providers.environmentVariable("IS_DEFAULT_BRANCH").getOrElse("false") == "true") {
		github {
			accessToken = providers.environmentVariable("GITHUB_TOKEN")
			repository = "Redheris/Mapart-Helper"
			commitish = providers.environmentVariable("DEFAULT_BRANCH")
			tagName = project.version
			announcementTitle = "GitHub"
		}
		discord {
			webhookUrl = providers.environmentVariable("DISCORD_WEBHOOK")
			username = "Release publisher"
			avatarUrl = "https://i.imgur.com/NiTaw1Z.png"
			content = changelog.map { "# Mapart Helper v" + project.version + "\n" + changelog_simple }
			style {
				look = "MODERN"
				thumbnailUrl = "https://cdn.modrinth.com/data/qRKpqkGI/31d2b319605a07e5b5565eece0e963e78bb92d30.png"
//				link = "BUTTON"
				color = "#7419CA"
			}
			setPlatforms(publishMods.platforms.modrinth, publishMods.platforms.curseforge)
		}
	}
}

